Archive2/e2/7d93fe9490bfbb/output
main.cpp: In function 'int main()':
main.cpp:29:13: error: no matching function for call to 'rqueue<>::start()'
     q.start();
             ^
main.cpp:29:13: note: candidate is:
main.cpp:13:60: note: template<class T> std::enable_if_t<(! std::is_same<T, void>::value), void> rqueue<Opts>::start() [with T = T; Opts = {}]
     std::enable_if_t<!std::is_same<T, void>::value, off_t> start()
                                                            ^
main.cpp:13:60: note:   template argument deduction/substitution failed:
